implement merge sort

--- a/solution-204-count-primes.html
+++ b/solution-204-count-primes.html
@@ -45,8 +45,8 @@
         return primeList.length;
     }
 
-    // console.log(" 9 = " + displayPrimes(10));
-    // console.log(" 11 = " + displayPrimes(11));
+    console.log(" 9 = " + displayPrimes(10));
+    console.log(" 11 = " + displayPrimes(11));
     console.log(" 499979 = " + displayPrimes(499979));
 </script>
 </body>
