--- a/solution-279-perfect-squares.html
+++ b/solution-279-perfect-squares.html
@@ -11,28 +11,32 @@
     }
 
     function calculateNumbers(num) {
+        let testNum = Math.sqrt(num);
+        if (testNum == Math.trunc(testNum)){
+            return 1;
+        }
         let midPoint = Math.trunc(num / 2);
         let num1 = midPoint;
         let num2 = num - num1;
         while (midPoint > 0) {
-            num1 = Math.trunc(Math.sqrt(midPoint));
-            num2 = Math.trunc(Math.sqrt(num - num1));
-            console.log(num1 + ", " + num2);
-            if (num == getSquare(num1, num2) ){
-                return "numbers found "+ num + " = " + num1 + ", " + num2;
+            while (calculateNumbers(midPoint) != 1){
+                midPoint--;
             }
-            midPoint--;
+            return 1 + calculateNumbers(num - midPoint);
+
         }
         return "numbers not found for " + num;
     }
 
-    console.log(calculateNumbers(13));
-    console.log(calculateNumbers(25));
-    console.log(calculateNumbers(12));
+    console.log('13 ' + calculateNumbers(13));
+    console.log('25 ' + calculateNumbers(25));
+    console.log('12 ' + calculateNumbers(12));
+    console.log('300 ' + calculateNumbers(1000));
 
-    console.log(calculateNumbers(3000));
+    // console.log('3000 ' + calculateNumbers(3000));
+    //
+    // console.log('4000 ' + calculateNumbers(4000));
 
-    console.log(calculateNumbers(4000));
 </script>
 </body>
 </html>
