--- a/solution-1-two-sum.html
+++ b/solution-1-two-sum.html
@@ -31,7 +31,7 @@
 
     console.log(twoSum([0, 3, 11, 15, 20, 25, 27, 30], 35));
 
-    console.log(twoSum([3, 2, 3], 6));
+    console.log(twoSum([3,2,3], 6));
 
 </script>
 </body>
